css/style.css
/* ... */
  header .social {
    padding-top: 20px; }
  header .read-more {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    text-align: center; }
  header .container-fluid {
    margin: 0;
    width: 100%;
    text-align: center; }
    header .container-fluid .logo.img-responsive {
      width: 250px;
      height: auto;
      margin: auto; }
  header .background {
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    min-height: 100%;
    min-height: 100vh;
    background-color: #fff;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    background-position: center top;
    z-index: -2; }
  header .parallax {
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    min-height: 100%;
    min-height: 100vh;
    background-image: none;
    z-index: -1; }
  header a.signup {
    display: inline-block;
    font-size: 20px;
    border-radius: 2px;
    padding: 17px 30px;
    transition: all 0.3s ease;
    background-color: #551a8b;
    color: #ffffff;
    font-family: "Open Sans", Arial, sans-serif;
    font-weight: 400; }
    header a.signup:hover {
      background-color: #551a8b   ;
      opacity: 0.7; }
  header a.fa {
    color: #551a8b;
    padding-bottom: 20px;
    opacity: 0.6; }
    header a.fa:hover {
      opacity: 0.8; }

section.about {
  background: url('../img/waterloo-campus.png');
  background-color: black;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  background-position: center bottom; }
  section.about h1, section.about h2, section.about h3, section.about p {
    color: white; }
  section.about p {
    font-family: "Open Sans", Arial, sans-serif;
    font-weight: 400; }

section.faq {
  background-color: #3D0158;
  color: white; }
  section.faq h1 {
    font-family: "Open Sans", Arial, sans-serif;
    font-weight: 400; }
  section.faq p.question {
    font-family: "Open Sans", Arial, sans-serif;
    font-weight: 400;
    margin-bottom: 20px;
    font-size: 1.75em;
    font-weight: bold; }
  section.faq p.answer {
    font-family: "Open Sans", Arial, sans-serif;
    font-weight: 300;
    margin-bottom: 20px;
    padding-left: 20px;
    color: #e7e1ed; }

section.sponsors-partners h1 {
  font-family: "Open Sans", Arial, sans-serif;
  font-weight: 400; }
section.sponsors-partners .sponsors, section.sponsors-partners .partners {
  text-align: center;}

footer {
  width: 100%;
  position: absolute;
  bottom: 1;
  height: 100;
  background-color: #551a8b;
  padding-top: 30px;
  padding-bottom: 30px;
  text-align: center;
  color: white; }
  footer .love {
    margin-top: 20px;
    font-family: "Open Sans", Arial, sans-serif;
    font-weight: 300; }

@media (max-width: 1300px) {
  header {
    background-size: 200% 100%; } }

@media (max-width: 991px) {
  section.showcase p.sub {
    font-size: 14px; }
  section.showcase .img-showcase {
    display: none; }
  section.showcase .img-rocket {
    height: 400px;
    width: auto; }
  section.sponsors-partners .inline-img {
    margin: 15px 0;
    max-width: 40%; }
  section.sponsors-partners .partner-img {
    margin: 15px 0;
    max-width: 60%; 
  }
  section.sponsors-partners .gold img {
    max-width: 35%;
    margin-left: 0;
    margin-right: 0; } 
  section.sponsors-partners .silver img {
  max-width: 20%;
  margin-left: 0;
  margin-right: 0; }}

@media (max-width: 800px) {
  h1, h2, h3 {
    margin-top: 10px;
    margin-bottom: 10px; }
  h1 {
    font-size: 35px; }
  h2 {
    font-size: 25px; }
  h3 {
    font-size: 18px; }
  p {
    font-size: 14px; }
  section.showcase p.sub {
    font-size: 14px; }
  section.showcase .img-showcase {
    display: none; }
  section.showcase .img-rocket {
    height: 400px;
    width: auto; }
  header a.fa {
    padding-bottom: 0; }
  section.about {
    background-size: auto; } }

/*# sourceMappingURL=style.css.map */

.navigation {
    position: fixed;
    top: 0;
    height: 10vh;
    line-height: 10vh;
    background-color: #EBF5F4;
    width: 100%;
    z-index: 1;
}

ul {
    background-color: #eeeeee;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

li {
    float: left;
}

li a {
    display: block;
    color: white;
    text-align: center;
    padding: 8px 5px;
    text-decoration: none;

}
li a:hover {
    background-color: #b3b3b3;
}

